static/css/chat.css
body {
    font-family: 'Inter', sans-serif;
    margin: 0;
    padding: 0;
  }
  
  #sidebar {
    font-family: inherit;
    width: 20%;
    background-color: #f0f0f0;
    padding: 20px;
    box-sizing: border-box;
    float: left;
    height: 100vh;
  }
  
  #chat-container {
    width: 80%;
    float: right;
    padding: 20px;
    box-sizing: border-box;
    font-family: inherit;
  }
  
  #chat-box {
    height: 400px;
    overflow-y: scroll;
    border: 1px solid #ccc;
    padding: 10px;
    font-family: inherit;
  }
  
  #input-container {
    margin-top: 20px;
    height: 50px;
  }
  
  #chat-input {
    width: calc(100% - 70px);
    box-sizing: border-box;
    border: 1px solid #ccc;
    border-radius: 5px 0 0 5px;
    font-family: inherit;
    padding: 20px;
  }
  
  #send-button {
    width: 60px;
    padding: 10px;
    box-sizing: border-box;
    border: none;
    border-radius: 0 5px 5px 0;
    background-color: #8346f3;
    color: #fff;
    cursor: pointer;
    font-family: inherit;
    padding-top: 20px;
    padding-bottom: 20px;
  }
  
  #send-button:hover {
    background-color: #7e4ce9;
  }

  #new-conv-button {
    padding: 10px;
    box-sizing: border-box;
    border: none;
    border-radius: 5px;
    background-color: #e6e6e6;
    color: #434343;
    cursor: pointer;
    width: 100%;
    font-weight: bolder;
    height: 50px;
    transition: all 0.1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
    font-family: inherit;
  }

  #new-conv-button:hover {
    background-color: #e0e0e0;
    border-left: 3px solid #8346f3;
  }

  #sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    /* existing styles */
    font-family: inherit;
  }
  
  #user_info {
    display: flex;
    align-items: center;
  }

  #user_info img {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    margin-right: 10px;
  }

  #user_info #user_name {
    font-weight: bold;
    font-family: inherit;
  }

  .message {
    margin: 10px 0;
    padding: 10px;
    border-radius: 5px;
    background-color: #f0f0f0;
    font-family: inherit;
  }

  .message.ASSISTANT {
    border-left: 3px solid #8346f3;
    padding-left: 15px;
  }

  :disabled {
    cursor: not-allowed;
    background-color: #e6e6e6;
    color: #434343;
  }

  #send-button:disabled {
    background-color: #55475a;
    color: #ffffff;
    cursor: not-allowed;
  }

  .infocontainer {
    display: flex;
    align-items: left;
  }

  .infocontainer img {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    margin-right: 10px;
  }

  .infocontainer .username {
    font-weight: bold;
    font-family: inherit;
    vertical-align: middle;
    margin-top: 5px;
  }

  /* Table styles */
  #chat-box table {
    width: 100%;
    border-collapse: collapse;
  }

  #chat-box th {
    background-color: #f0f0f0;
    padding: 10px;
    font-family: inherit;
    text-align: left;
    font-weight: bold;
    border-bottom: 2px solid #f0f0f0;
  }

  #chat-box td {
    border-bottom: 1px solid #f0f0f0;
    padding: 10px;
    font-family: inherit;
    text-align: left;
  }

  #chat-box tr:hover {
    background-color: #f9f9f9;
  }

  #chat-box th:first-child,
  #chat-box td:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    padding-left: 20px;
  }

  #chat-box th:last-child,
  #chat-box td:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    padding-right: 20px;
  }

  #chat-box tr {
    transition: all 0.1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
  }

  #chat-box tr:hover {
    background-color: #f9f9f9;
  }

/* Table styles */
#chat-box table {
  width: 100%;
  border-collapse: separate; /* Use 'separate' to apply spacing between cells */
  border-spacing: 0; /* Optional: Adjust spacing between cells */
}

#chat-box th, #chat-box td {
  border: 1px solid #ccc; /* Add border to each cell */
  padding: 10px;
  font-family: inherit;
  text-align: left;
}

#chat-box th {
  background-color: #e6e6e6; /* Different background color for header */
  font-weight: bold;
}

.msgbtn {
  color: rgb(255, 0, 0);
  border: none;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
  width: 15px;
  height: 15px;
}

/* Modal styles */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
  border-radius: 5px;
  display: flex;
  flex-direction: column;
}

/* Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

#save-edit {
  background-color: #8346f3;
  color: white;
  padding: 10px 15px;
  margin: 8px 0;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}


#conversations {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  margin-top: 20px;
}

#conversations .conversations-list {
  overflow-y: scroll;
  height: 100%;
}

.conversation {
  padding: 10px;
  border-bottom: 1px solid #f0f0f0;
  border-radius: 5px;
  cursor: pointer;
  transition: all 0.1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
  font-family: inherit;
  padding-top: 20px;
  padding-bottom: 20px;
}

.conversation:hover {
  background-color: #f9f9f9;
}

.messagecontainer {
  margin-bottom: 40px;
}

.msgcontrols {
  /* row aligned to the left */
  display: flex;
  justify-content: left;
  align-items: left;
  flex-direction: row;
  margin-left: 8px;
}

.msgcontrol {
  /* each control is a flex item */
  margin-right: 10px;
  font-size: 15px;
  color: #a0a0a0;
  cursor: pointer;
  transition: all 0.1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
}

.msgcontrol:hover {
  color: #434343;
}

